# irc-rssfeed

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  autoexec  config.toml  pyproject.toml  rssfeed-brmlab.pl  rssfeed.pl  rssfeed.py  rssfeed.sh
feeds/: koubsky.opml  longreads.opml  newscz.opml  slashdot.opml
tests/: test_concurrency_paths.py  test_rssfeed.py
